# easy-steamdeck-galgame

./: .gitignore  AGENTS.md  AppImageBuilder.yml  COMPLETION_CHECKLIST.md  DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS_GUIDE.md  INSTALL.md  LICENSE  LINUX_PACKAGING.md  LINUX_PACKAGING_SUMMARY.md  Makefile  NEXT_STEPS.md  OPTIMIZATION_REPORT.md  PROJECT_STATUS.md  PYINSTALLER_FIX.md  PYINSTALLER_GUIDE.md  PYINSTALLER_QUICK_START.md  QUICK_START.md  README.md  README_CN.md  README_en.md  STRUCTURE.md  TUI_IMPLEMENTATION.md  TUI_USAGE.md  WINDOWS_DEVELOPER_GUIDE.md  build-flatpak.sh  build_appimage.sh  build_linux_package.sh  build_pyinstaller.sh  build_pyinstaller_crossplatform.sh  check_packaging.sh  font_installer.py  game_launcher.py  install_desktop.sh  io.github.steamdeck_galgame.desktop  io.github.steamdeck_galgame.json  locale_installer.py  main.py  pyproject.toml  requirements.txt  (+14 more)
.github/workflows/: build-appimage.yml  build-pyinstaller.yml  build.yml  ci.yml  flatpak-build.yml  test.yml
doc/: BUILD_GUIDE.md  QUICK_REFERENCE.md
src/: __init__.py
src/config/: __init__.py
src/core/: __init__.py  font_downloader.py  game_launcher.py  nonsteam_manager.py  steam_manager.py
src/core/downloader/: __init__.py
src/core/installers/: __init__.py  base.py  font.py  locale.py
src/gui/: __init__.py  main.py
src/tui/: __init__.py  main.py
src/ui/: __init__.py  font_installer_tab.py  game_launcher_tab.py  main.py  widgets.py
src/utils/: __init__.py  command.py  locale.py  path.py  system.py
tests/: test_all.py  test_download_progress.py  test_import.py  test_logic.py
