[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steamdeck-galgame"
version = "1.0.0"
description = "SteamDeck 中文环境配置工具 - 为 SteamDeck 配置中文游戏环境"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "SteamDeck GAL Community", email = "contact@steamdeck-galgame.io"}
]
keywords = ["steamdeck", "galgame", "chinese", "locale", "fonts"]
dependencies = [
    "requests>=2.25.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Desktop Environment",
]

[tool.setuptools]
packages = ["src", "src.gui", "src.core", "src.core.installers", "src.core.downloader", "src.utils", "src.config"]

[tool.black]
line-length = 100
target-version = ['py37']

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
